fix table overflow

--- a/assets/chroma.css
+++ b/assets/chroma.css
@@ -1,5 +1,5 @@
 /* Background */ .bg { color: #c9d1d9; background-color: #0d1117; }
-/* PreWrapper */ .chroma { color: #c9d1d9; background-color: #0d1117; }
+/* PreWrapper */ .chroma { color: #c9d1d9; background-color: #0d1117; width: fit-content; }
 /* Error */ .chroma .err { color: #f85149 }
 /* LineLink */ .chroma .lnlinks { outline: none; text-decoration: none; color: inherit }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
